--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,15 +6,18 @@
   "dependencies": {
     "anix": "^0.3.3",
     "axios": "^0.21.1",
+    "install": "^0.13.0",
     "jquery": "^3.2.1",
     "manager": "^1.0.9",
+    "npm": "^6.14.11",
     "particles-bg": "^2.3.12",
     "proton-engine": "^4.2.1",
     "raf": "^3.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-ga": "^2.3.5",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "spotify-web-api-js": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
