--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -16,8 +16,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-ga": "^2.3.5",
-    "react-scripts": "1.0.17",
-    "spotify-web-api-js": "^1.5.1"
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
