--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -16,7 +16,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-ga": "^2.3.5",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "twitter": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
