--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -9,6 +9,7 @@
     "install": "^0.13.0",
     "jquery": "^3.2.1",
     "manager": "^1.0.9",
+    "needle": "^2.6.0",
     "npm": "^6.14.11",
     "particles-bg": "^2.3.12",
     "proton-engine": "^4.2.1",
