--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-backend",
   "version": "0.0.1",
   "description": "using express and heroku and mongo",
-  "main": "index.js",
+  "main": "/server/index.js",
   "scripts": {
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon index.js",
