--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "using express and heroku and mongo",
   "main": "/server/index.js",
   "scripts": {
-    "start": "NODE_ENV=production node server",
-    "dev": "NODE_ENV=development nodemon server",
+    "start": "cross-env NODE_ENV=production node server",
+    "dev": "cross-env NODE_ENV=development nodemon server",
     "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "repository": {
@@ -29,7 +29,6 @@
     "spotify-web-api-node": "^5.0.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "nodemon": "^2.0.7"
   }
 }
