--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "using express and heroku and mongo",
   "main": "/server/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server",
+    "start": "NODE_ENV=production node server",
     "dev": "cross-env NODE_ENV=development nodemon server",
     "test": "NODE_ENV=test jest --verbose --runInBand"
   },
@@ -23,7 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.11.11",
+    "mongoose": "^5.11.12",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "spotify-web-api-node": "^5.0.0"
