--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -1,7 +1,6 @@
 {
   "name": "alexwang-portfolio",
   "version": "0.1.0",
-  "homepage": "./",
   "private": true,
   "dependencies": {
     "anix": "^0.3.3",
@@ -25,5 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3002"
+  
 }
