--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=production node server",
     "dev": "cross-env NODE_ENV=development nodemon server",
     "test": "NODE_ENV=test jest --verbose --runInBand",
-    "build": "cd react-ui && npm run build"
+    "build": "cd react-ui/ && npm install && npm run build"
   },
   "repository": {
     "type": "git",
