--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.2.0",
     "react-ga": "^2.3.5",
     "react-scripts": "1.0.17",
+    "react-spotify-player": "^1.0.4",
     "twitter": "^1.7.1"
   },
   "scripts": {
